# mtg-dictionary

./: CMakeLists.txt  README.md
MTGDictionary/apps/: CMakeLists.txt
MTGDictionary/apps/DownloadCards/: CMakeLists.txt  DownloadCards_Window.cpp  DownloadCards_Window.h  DownloadCards_Window.ui  Main.cpp
MTGDictionary/data/cardlist/: BFZ.txt  BNG.txt  DTK.txt  FRF.txt  KTK.txt  M15.txt  ORI.txt  THS.txt
MTGDictionary/include/: CardDetector.h  CardMatcher.h  CardScanner.h  Log.h  OpenCVUtility.h  SquareDetection.h
MTGDictionary/source/: CardDetector.cpp  CardMatcher.cpp  CardScanner.cpp  Main.cpp  SquareDetection.cpp
